// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render shows the loading indicator when loading 1`] = `
<Styled(div)>
  <SearchField
    onChange={[Function]}
    params={
      Object {
        "query": "",
      }
    }
  />
  <Styled(div)>
    <SearchFilters
      onChange={[Function]}
      params={
        Object {
          "query": "",
        }
      }
    />
    <Styled(div)>
      <LoadingIndicator
        isLoading={true}
      />
    </Styled(div)>
  </Styled(div)>
</Styled(div)>
`;

exports[`#render shows the search view 1`] = `
<Styled(div)>
  <SearchField
    onChange={[Function]}
    params={
      Object {
        "query": "",
      }
    }
  />
  <Styled(div)>
    <SearchFilters
      onChange={[Function]}
      params={
        Object {
          "query": "",
        }
      }
    />
    <Styled(div)>
      <LoadingIndicator
        isLoading={false}
      />
      <BillList
        isAnimated={true}
        pageSize="test-size"
        viewer="test-viewer"
      />
    </Styled(div)>
  </Styled(div)>
</Styled(div)>
`;

exports[`#render shows the search view with default params 1`] = `
<Styled(div)>
  <SearchField
    onChange={[Function]}
    params={
      Object {
        "query": "test-query",
      }
    }
  />
  <Styled(div)>
    <SearchFilters
      onChange={[Function]}
      params={
        Object {
          "query": "test-query",
        }
      }
    />
    <Styled(div)>
      <LoadingIndicator
        isLoading={false}
      />
      <BillList
        isAnimated={true}
        pageSize="test-size"
        viewer="test-viewer"
      />
    </Styled(div)>
  </Styled(div)>
</Styled(div)>
`;
